--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 </head>
 <body>
+<div class="nav">
+<ul>
+<li></li>
+<li></li>
+<li></li>
+</ul>
+<div class="">
+</div>
 </body>
 </html>
