--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
 <div class="nav">
 <ul>
-<li></li>
-<li></li>
-<li></li>
+<li>关于我</li>
+<li>关于网站</li>
+<li>所得成就</li>
 </ul>
-<div class="">
+<div class="nav_more">
+div class="nav_more_button">
+<img src="" />
+</div>
+</div>
+
 </div>
 </body>
 </html>
