--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <li>关于我</li>
 <li>关于网站</li>
 <li>所得成就</li>
-</ul>
-<div class="nav_more">
-div class="nav_more_button">
-<img src="" />
+<div class="nav_more_button">
 </div>
+</ul>
 </div>
 
+<div class="nav_more">
+	<div class="nav_background">
+		</div>
 </div>
+
 </body>
 </html>
